@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [CYBEREASON] Update malops fetching
 - [DEPENDENCIES] Python dependencies upgrade
   - gunicorn 21.2.0 -> 22.0.0
+- [CLUSTER] [CONFIG] Reload all Rsyslog/Filebeat Listeners when updating the Redis cluster password
 ### Fixed
 - [FRONTEND] Missing redis fields in template infos
 
